fix z-index for map-container on fullscreen (details bug)

--- a/css/main.less
+++ b/css/main.less
@@ -582,6 +582,7 @@ header#masthead {
 	bottom: 0;
 	.map-container {
 		position: relative !important;
+		z-index: 100;
 		.map-fullscreen-map {
 			position: absolute !important;
 		}
